--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-Flask==3.1.2
-pandas==2.1.0
+Flask==2.3.3
+pandas==2.2.5
+numpy==1.26.4
 openpyxl==3.1.2
-playwright==1.42.0
+playwright==1.43.0
+gunicorn==21.2.0
